Address vulnerability in which non-escaping of notification text allowed for XSS attacks. Make custom escapeHTML method to deal w/ it.

--- a/app/assets/templates/header_signed_in.jst.ejs
+++ b/app/assets/templates/header_signed_in.jst.ejs
@@ -35,7 +35,7 @@
 					<li>
 						<a href="<%= notification.url %>" class="notif" 
 							data-id="<%= notification.id %>">
-							<%= notification.text %>
+							<%= AirNZG.Utils.escapeHTML(notification.text) %>
 						</a>
 					</li>
 				<% }); %>
